@@ -1,8 +1,8 @@
 package com.reqlint.core.surefire;
 
+import com.reqlint.core.surefire.report.TestRun;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -20,44 +20,44 @@ class TestReportsLoaderTest {
         testReport = underTest.getTestReport();
     }
 
-    @Test
+    @org.junit.jupiter.api.Test
     public void can_load_reports() {
         Assertions.assertThat(testReport.reports()).isNotEmpty();
     }
 
-    @Test
+    @org.junit.jupiter.api.Test
     public void can_look_for_one_report_by_its_identifier() {
-        List<SurefireTestReportItem> reports = testReport.reportsOfTestCase("TC_101");
+        List<TestRun> reports = testReport.reportsOfTestCase("TC_101");
         Assertions.assertThat(reports).hasSize(1);
-        Assertions.assertThat(reports.getFirst().name()).startsWith("The bit bucket works @TC_101 Upon first connection");
+        Assertions.assertThat(reports.getFirst().title()).startsWith("The bit bucket works @TC_101 Upon first connection");
         Assertions.assertThat(reports.getFirst().isFailed()).isFalse();
     }
 
-    @Test
+    @org.junit.jupiter.api.Test
     public void can_look_for_whole_words() {
-        List<SurefireTestReportItem> reports = testReport.reportsOfTestCase("TC_10");
+        List<TestRun> reports = testReport.reportsOfTestCase("TC_10");
         Assertions.assertThat(reports).isEmpty();
     }
 
-    @Test
+    @org.junit.jupiter.api.Test
     public void can_identify_failed_tests() {
-        List<SurefireTestReportItem> reports = testReport.reportsOfTestCase("TC_102");
+        List<TestRun> reports = testReport.reportsOfTestCase("TC_102");
         Assertions.assertThat(reports).hasSize(1);
         Assertions.assertThat(reports.getFirst().isFailed()).isTrue();
     }
 
-    @Test
+    @org.junit.jupiter.api.Test
     public void can_segregate_output_per_stage() {
-        List<SurefireTestReportItem> reports = testReport.reportsOfTestCase("TC_201");
+        List<TestRun> reports = testReport.reportsOfTestCase("TC_201");
         Assertions.assertThat(reports).hasSize(1);
-        SurefireTestReportItem report = reports.getFirst();
-        Assertions.assertThat(report.stageOutputs()).hasSize(3);
-        Assertions.assertThat(report.stageOutputs().get(0).stageNumber()).isEqualTo(0);
-        Assertions.assertThat(report.stageOutputs().get(0).stageTitle()).isEqualTo("Preparation");
-        Assertions.assertThat(report.stageOutputs().get(1).stageNumber()).isEqualTo(1);
-        Assertions.assertThat(report.stageOutputs().get(1).stageTitle()).isEqualTo("Consume some tokens.");
-        Assertions.assertThat(report.stageOutputs().get(2).stageNumber()).isEqualTo(2);
-        Assertions.assertThat(report.stageOutputs().get(2).stageTitle()).isEqualTo("Verify that token availability increased according to replenishment rate");
+        TestRun report = reports.getFirst();
+        Assertions.assertThat(report.stages()).hasSize(3);
+        Assertions.assertThat(report.stages().get(0).ordinal()).isEqualTo(0);
+        Assertions.assertThat(report.stages().get(0).title()).isEqualTo("Preparation");
+        Assertions.assertThat(report.stages().get(1).ordinal()).isEqualTo(1);
+        Assertions.assertThat(report.stages().get(1).title()).isEqualTo("Consume some tokens.");
+        Assertions.assertThat(report.stages().get(2).ordinal()).isEqualTo(2);
+        Assertions.assertThat(report.stages().get(2).title()).isEqualTo("Verify that token availability increased according to replenishment rate");
     }
 
 }
